			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04o: *********************************

BUG: (5/26/06, SMR) Typing a numeric key to change pin levels destroys
     the export name (Bug #1064).
FIX: In InteractiveRouter.MakeVerticalRouteJob.doIt(), only delete the pin
     if it is not exported.

BUG: (5/26/06, SMR) "Change" of arcs that includes "nodes with arcs" fails (Bug #1031).
FIX: In Change.replaceAllArcs(), corrected head/tail reversal, maintain node names.

IMP: (5/25/06, GVG) Cursor in Name field in Attributes dialog can be moved to the middle of the word.
Done by not calling showSelectedAttribute(varKey).

BUG: (5/25/06, GVG) [Bug 1065]  New: NullPointerException on toggle head and tail (Bug #1065)
FIX: Indeed, the exception is in Toggle Port Negation. Exception was due to Highlight2 not serializable.
Code changed so list of ElectricObjects is used in the doIt() method.

IMP: (5/25/06, RK) NCC: add test for "forceWireMatch" to regression suite

IMP/MAN: (5/25/06, SMR) "Layers and Patterns" preferences has "Factory Reset" (Bug #1037).

IMP: (5/25/06, RK) NCC: Remove  print statements I put in for debugging Bugzilla# 969.

IMP/MAN: (5/25/06, GVG) Workaround for KeyBindings in EToolBarRadioButton for MacOSX (Bug #1056).
Problem: JRadioButtonMenuItem doesn't handle accelerators well. In case of Command-S and S in two different
functions, JRadioButtonMenuItem assumes are identical and a conflict is generated. Temporary workaround:
Switch from JRadioButtonMenuItem to JMenuItem for EToolBarRadioButton on MacOSX. Thus the accelerators will
be displayed and user can use toolbar icons to know what is selected.

IMP: (5/24/06, RK) Improvements to NCC GUI user manual

IMP/MAN: (5/24/06, GVG) List User Preferences in HelpMenu.

IMP/MAN: (5/23/06, GVG) Accelerators in ToolTip text of ToolBar buttons.

BUG: (5/23/06, SMR) Smooth zooming can crash (Bug #1054)